feet/ticket-3: fix Poco cursor flickering issue

--- a/theme/css/chrome.css
+++ b/theme/css/chrome.css
@@ -7,6 +7,7 @@ html {
 .content a:link,
 a:visited,
 a > .hljs {
+    cursor: var(--active-poco-cursor);
     color: var(--links);
 }
 
